kubernetes/deployments.yaml
# Central lib
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-lib-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central-lib
  template:
    metadata:
      labels:
        app: central-lib
    spec:
      containers:
        - name: central-lib
        image: aleksandar4761/central-library:latest
